--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
+
+
 body {
+    height: 100%;
     background-image: url("../images/concrete_seamless.png");
     margin: 0px;
     color: #777777;
 }
+
+
+
 
 a {text-decoration-line: none;
    text-decoration: none;}
@@ -22,7 +28,7 @@ border-style: hidden hidden solid hidden;
        
        background-color:#4aaaa5;
        position:absolute;
-       left: 2em;
+       left: 150px;
        top: 10px;}
 
        h1 {font-family: Georgia, Times New Roman, Times, 'serif';
@@ -39,7 +45,7 @@ border-style: hidden hidden solid hidden;
 
        nav { float: right;
              position: absolute;
-             right: 150px;
+             right: 115px;
              top: 40px;
             
              font-size: 20px;
@@ -48,12 +54,12 @@ border-style: hidden hidden solid hidden;
     .content {clear: both;
         float: left;
         position: relative;
-        left: 75px;
+        left: 125px;
         margin:25px ;
         padding:25px;
         width: 600px;
         background-color: #ffffff;
-    overflow: auto}
+    overflow: auto;}
 
     
     
@@ -69,14 +75,24 @@ border-style: hidden hidden solid hidden;
 border-style: hidden hidden solid hidden;}
        .ramble {margin-top: 25px;} 
  
+.portopica {margin-top: 25px;
+            margin-bottom: 25px;
+            margin-right: 45px;
+            width:275px;
+            height: 200px;}
 
-        .external {
-        
-            float: right;
+            .portopic {margin-top: 25px;
+               margin-bottom: 25px;
+                width:275px;
+                height: 200px;}            
+
+
+
+        .external {float:right;
             position: relative;
-            right: 100px;
+            right:90px;
             margin:25px;
-            padding:25px;
+            padding:25px 20px;
             width: 220px;
             text-align: center;
             background-color: #ffffff;}
@@ -87,6 +103,19 @@ border-style: hidden hidden solid hidden;}
             border-style: hidden hidden solid hidden;}
 
             .icon {margin-top: 25px;
-                width: 25%}
+                float:left;
+                
+                width: 70px;
+                height: 70px;}
 
-footer{clear: both}
+footer{clear: both;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 80px;
+    background-color: #666666;
+    color: #cccccc;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 80px;
+}
