--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,11 @@ border-style: hidden hidden solid hidden;
         position: relative;
         left: 125px;
         margin:25px ;
+        border-style: solid;
+        border-width:1px;
+        border-color: #cccccc;
         padding:25px;
-        width: 600px;
+        width: 596px;
         background-color: #ffffff;
     overflow: auto;}
 
@@ -75,27 +78,31 @@ border-style: hidden hidden solid hidden;
 border-style: hidden hidden solid hidden;}
        .ramble {margin-top: 25px;} 
  
-.portopica {margin-top: 25px;
-            margin-bottom: 25px;
-            margin-right: 45px;
-            width:275px;
-            height: 200px;}
+.layout{ margin-top: 25px;
+    display: grid;
+    grid-template-columns: 290px 290px;
+    grid-column-gap: 16px;
+    grid-row-gap: 25px;}
 
-            .portopic {margin-top: 25px;
-               margin-bottom: 25px;
-                width:275px;
-                height: 200px;}            
+   
 
-
+   
+.unit{
+      width: 290px;
+      height:200px;}
 
         .external {float:right;
             position: relative;
             right:90px;
             margin:25px;
+            border-style: solid;
+            border-width: 1px;
+            border-color: #cccccc;
             padding:25px 20px;
-            width: 220px;
+            width: 216px;
             text-align: center;
-            background-color: #ffffff;}
+            background-color: #ffffff;
+        overflow: auto;}
 
             h2 {padding-bottom: 25px;
                 border-color: #cccccc;
@@ -103,16 +110,25 @@ border-style: hidden hidden solid hidden;}
             border-style: hidden hidden solid hidden;}
 
             .icon {margin-top: 25px;
+                margin-right: 3px;
                 float:left;
                 
                 width: 70px;
                 height: 70px;}
 
+                .iconb {margin-top: 25px;
+                    float:right;
+                    
+                    width: 69px;
+                    height: 69px;} 
 footer{clear: both;
     position: fixed;
     bottom: 0px;
     width: 100%;
-    height: 80px;
+    height: 73px;
+    border-style: solid hidden hidden hidden;
+    border-width: 7px;
+    border-color: #4aaaa5;
     background-color: #666666;
     color: #cccccc;
     text-align: center;
