--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,20 @@ border-style: hidden hidden solid hidden;
              top: 40px;
             
              font-size: 20px;
+            
        }
 
+
+       p {font-family: 'Arial', Helvetica, sans-serif;
+          color: #777777}
+
+          form {font-family: 'Arial', Helvetica, sans-serif;
+    color: #777777}
+      input{ color: #777777;}
+      textarea{color: #777777;
+               border-style: solid;
+               border-width: 2px;
+               border-color: #777777;}
     .content {clear: both;
         float: left;
         position: relative;
@@ -82,9 +94,17 @@ border-style: hidden hidden solid hidden;}
     display: grid;
     grid-template-columns: 290px 290px;
     grid-column-gap: 16px;
-    grid-row-gap: 25px;}
+    grid-row-gap: 25px;
+    position: relative;}
 
-   
+   .Plink{
+          z-index: -1;}
+
+.plinka{ background-color: #4aaaa5; position: absolute; text-align: center; line-height: 24px; color: #ffffff; font-family: Georgia, Times New Roman, Times, 'serif'; width: 290px; height:24px; grid-column: 1; grid-row:1 ;}
+.plinkb{ background-color: #4aaaa5; position: absolute; text-align: center; line-height: 24px; color: #ffffff; font-family: Georgia, Times New Roman, Times, 'serif'; width: 290px; height:24px; grid-column: 2; grid-row:1 ;}
+.plinkc{ background-color: #4aaaa5; position: absolute; text-align: center; line-height: 24px; color: #ffffff; font-family: Georgia, Times New Roman, Times, 'serif'; width: 290px; height:24px; grid-column: 1; grid-row:2 ;}
+.plinkd{ background-color: #4aaaa5; position: absolute; text-align: center; line-height: 24px; color: #ffffff; font-family: Georgia, Times New Roman, Times, 'serif'; width: 290px; height:24px; grid-column: 2; grid-row:2 ;}
+.plinke{ background-color: #4aaaa5; position: absolute; text-align: center; line-height: 24px; color: #ffffff; font-family: Georgia, Times New Roman, Times, 'serif'; width: 290px; height:24px; grid-column: 1; grid-row:3 ;}   
 
    
 .unit{
