--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,53 @@
 
 
+body { 
+    padding-top: 70px;
+      background-image: url("../images/concrete_seamless.png");
+    color:#777777; }
+header {
+    background-color:#ffffff;
+   }
+
+ .name {
+     color: #ffffff;
+     background-color: #4aaaa5;
+ }
+
+h1 {text-align: center;
+    background-color: #ffffff;
+    font-family: Georgia, Times New Roman, Times, 'serif';
+           font-size:40px;
+
+}
+h2 {
+    text-align: center;
+}
+p {font-family: 'Arial', Helvetica, sans-serif;
+    color: #777777}
+.content{
+    background-color: #ffffff;
+   
+    overflow: auto;
+}
+.connect{
+    background-color: #ffffff ;
+}
+
+       .icon {
+           height: 70px;
+           width:  70px;
+       }
+
+       .unit {
+           height: 200px;
+           width:  290px;
+       }
+footer{
+   height: 70px;
+   border-style: solid hidden hidden hidden;
+   border-width: 7px;
+   border-color: #4aaaa5;
+   background-color: #666666;
+   color: #cccccc;
+line-height: 70px;
+text-align: center;}
